--- a/frontend/src/app/components/accounts/accounts-menu/accounts-menu.html
+++ b/frontend/src/app/components/accounts/accounts-menu/accounts-menu.html
@@ -19,6 +19,7 @@
   [serverError]="dialogError()"
   title="Nouveau compte bancaire"
   submitLabel="Créer le compte"
+  [currencyCode]="defaultCurrency()"
   (cancelled)="closeDialog()"
   (submitted)="handleCreateAccount($event)"
 ></app-account-dialog>
