feat: add transaction status management and pointed balance to accounts

--- a/frontend/src/app/pages/account-page/account-page.html
+++ b/frontend/src/app/pages/account-page/account-page.html
@@ -8,6 +8,9 @@
     </div>
     <div class="basis-full md:basis-10/12">
       <app-ui-card>
+        <app-account-menu></app-account-menu>
+      </app-ui-card>
+      <app-ui-card>
         <app-account-table></app-account-table>
       </app-ui-card>
     </div>
