--- a/frontend/src/app/pages/account-page/account-page.html
+++ b/frontend/src/app/pages/account-page/account-page.html
@@ -8,10 +8,10 @@
     </div>
     <div class="basis-full md:basis-10/12">
       <app-ui-card>
-        <app-account-menu></app-account-menu>
+        <app-account-menu (addTransaction)="handleAddTransaction()"></app-account-menu>
       </app-ui-card>
       <app-ui-card>
-        <app-account-table></app-account-table>
+        <app-account-table [addTransactionTrigger]="addTransactionTrigger"></app-account-table>
       </app-ui-card>
     </div>
   </div>
