--- a/frontend/src/app/components/account/account-menu/account-menu.html
+++ b/frontend/src/app/components/account/account-menu/account-menu.html
@@ -43,6 +43,7 @@
     <div class="flex flex-row items-center">
         <div class="basis-full md:basis-3/12">
             <button type="button"
+                (click)="onAddTransaction()"
                 class="cursor-pointer flex items-center gap-2 p-1 px-2 rounded-md hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-[#58a9ff] max-w-xs text-left">
                 <fa-icon [icon]="icTransactionAdd" class="text-base text-slate-700"></fa-icon>
                 <span class="text-sm font-medium">Ajouter une transaction</span>
