feat: add status toggle functionality for account transactions with UI updates

--- a/frontend/src/app/components/account/account-table/account-table.html
+++ b/frontend/src/app/components/account/account-table/account-table.html
@@ -36,6 +36,7 @@
                     [autoEditKey]="autoEditKeyFor(transaction)"
                     [isNew]="isDraft(transaction)"
                     (save)="handleSave(transaction, $event)"
+                    (changeStatus)="handleStatusChange($event)"
                     (cancel)="handleCancel(transaction)"
                 ></app-account-transaction>
             </ng-container>
