--- a/frontend/src/app/components/budget/budget-month-summary/budget-month-summary.html
+++ b/frontend/src/app/components/budget/budget-month-summary/budget-month-summary.html
@@ -14,7 +14,7 @@
 
         <div class="flex flex-row justify-between font-bold text-sm text-gray-600 pt-1 mt-1 border-t border-gray-200">
             <div>Balance du mois</div>
-            <div [class]="getAmountClass(totalAvailable)">{{ formatCurrencyWithSign(totalAvailable) }}</div>
+            <div [class]="getAmountClass(monthBalance)">{{ formatCurrencyWithSign(monthBalance) }}</div>
         </div>
     </div>
 </div>
